Course Details Added Successfully

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,6 +39,15 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href=@Url.Content("~/css/style.css") rel="stylesheet">
+    <style>
+    html,body{
+        width:100%;
+        height:100%;
+        overflow-x:hidden;
+        overflow-y:auto;
+    }
+    
+    </style>
 </head>
 
 <body>
