--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
-﻿@model List<Coursera.Areas.Instructor.Models.MyProfileModel>
+﻿@* @model List<Coursera.Areas.Instructor.Models.MyProfileModel> *@
+
+    @model List<CourseViewModel>
 
 @{
     Layout = "_Layout";
-   // var Instructors = ViewData["Instructor"] as List<MyProfileModel> ?? new List<MyProfileModel>();
+    // var Instructors = ViewData["Instructor"] as List<MyProfileModel> ?? new List<MyProfileModel>();
 
 }
 @{
@@ -10,8 +12,12 @@
     var userPhoto = ViewData["UserPhoto"] as string ?? "/assets2/img/avatars/userProfile2.jpg";
     var userName = ViewData["UserName"] as string ?? "User";
     var roleName = ViewData["RoleName"] as string ?? "Guest";
+  // var courses= ViewData["Courses"] as List<CourseViewModel> ?? new List<CourseViewModel>();
     var Instructors = ViewData["Instructor"] as List<MyProfileModel> ?? new List<MyProfileModel>();
+    // var courseDetails = ViewData["CourseDetails"] as List<CourseViewModel> ?? new List<CourseViewModel>();
 }
+
+
 
 <!-- Header Start -->
 <div class="jumbotron jumbotron-fluid position-relative overlay-bottom" style="margin-bottom: 90px;">
@@ -142,11 +148,15 @@
             </div>
         </div>
     </div>
+
+   
     <div class="owl-carousel courses-carousel">
+        @foreach (var course in Model)
+        {
         <div class="courses-item position-relative">
-            <img class="img-fluid" src="img/courses-1.jpg" alt="">
+                <img class="img-fluid" src="@course.CourseImage" style="object-fit: cover;height:400px" alt="">
             <div class="courses-text">
-                <h4 class="text-center text-white px-3">Web design & development courses for beginners</h4>
+                <h4 class="text-center text-white px-3">@course.CourseName</h4>
                 <div class="border-top w-100 mt-3">
                     <div class="d-flex justify-content-between p-4">
                         <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
@@ -158,137 +168,48 @@
                 </div>
             </div>
         </div>
-        <div class="courses-item position-relative">
-            <img class="img-fluid" src="img/courses-2.jpg" alt="">
-            <div class="courses-text">
-                <h4 class="text-center text-white px-3">Web design & development courses for beginners</h4>
-                <div class="border-top w-100 mt-3">
-                    <div class="d-flex justify-content-between p-4">
-                        <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
-                        <span class="text-white"><i class="fa fa-star mr-2"></i>4.5 <small>(250)</small></span>
-                    </div>
-                </div>
-                <div class="w-100 bg-white text-center p-4">
-                    <a class="btn btn-primary" href="detail.html">Course Detail</a>
-                </div>
-            </div>
-        </div>
-        <div class="courses-item position-relative">
-            <img class="img-fluid" src="img/courses-3.jpg" alt="">
-            <div class="courses-text">
-                <h4 class="text-center text-white px-3">Web design & development courses for beginners</h4>
-                <div class="border-top w-100 mt-3">
-                    <div class="d-flex justify-content-between p-4">
-                        <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
-                        <span class="text-white"><i class="fa fa-star mr-2"></i>4.5 <small>(250)</small></span>
-                    </div>
-                </div>
-                <div class="w-100 bg-white text-center p-4">
-                    <a class="btn btn-primary" href="detail.html">Course Detail</a>
-                </div>
-            </div>
-        </div>
-        <div class="courses-item position-relative">
-            <img class="img-fluid" src="img/courses-4.jpg" alt="">
-            <div class="courses-text">
-                <h4 class="text-center text-white px-3">Web design & development courses for beginners</h4>
-                <div class="border-top w-100 mt-3">
-                    <div class="d-flex justify-content-between p-4">
-                        <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
-                        <span class="text-white"><i class="fa fa-star mr-2"></i>4.5 <small>(250)</small></span>
-                    </div>
-                </div>
-                <div class="w-100 bg-white text-center p-4">
-                    <a class="btn btn-primary" href="detail.html">Course Detail</a>
-                </div>
-            </div>
-        </div>
-        <div class="courses-item position-relative">
-            <img class="img-fluid" src="img/courses-5.jpg" alt="">
-            <div class="courses-text">
-                <h4 class="text-center text-white px-3">Web design & development courses for beginners</h4>
-                <div class="border-top w-100 mt-3">
-                    <div class="d-flex justify-content-between p-4">
-                        <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
-                        <span class="text-white"><i class="fa fa-star mr-2"></i>4.5 <small>(250)</small></span>
-                    </div>
-                </div>
-                <div class="w-100 bg-white text-center p-4">
-                    <a class="btn btn-primary" href="detail.html">Course Detail</a>
-                </div>
-            </div>
-        </div>
-        <div class="courses-item position-relative">
-            <img class="img-fluid" src="img/courses-6.jpg" alt="">
-            <div class="courses-text">
-                <h4 class="text-center text-white px-3">Web design & development courses for beginners</h4>
-                <div class="border-top w-100 mt-3">
-                    <div class="d-flex justify-content-between p-4">
-                        <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
-                        <span class="text-white"><i class="fa fa-star mr-2"></i>4.5 <small>(250)</small></span>
-                    </div>
-                </div>
-                <div class="w-100 bg-white text-center p-4">
-                    <a class="btn btn-primary" href="detail.html">Course Detail</a>
-                </div>
-            </div>
-        </div>
+
+        }
+       
+        
     </div>
-  @*   <div class="row justify-content-center bg-image mx-0 mb-5">
+    <div class="row justify-content-center bg-image mx-0 mb-5">
         <div class="col-lg-6 py-5">
             <div class="bg-white p-5 my-5">
                 <h1 class="text-center mb-4">30% Off For New Students</h1>
-                <form id="registrationForm" asp-action="SubmitRegisterForm" asp-controller="Form">
+                <form>
                     <div class="form-row">
                         <div class="col-sm-6">
                             <div class="form-group">
-                                <input type="text" class="form-control bg-light border-0" placeholder="Your Name" asp-for="" style="padding: 30px 20px;">
-                                <span asp-validation-for="register.Name" class="text-danger"></span>
+                                <input type="text" class="form-control bg-light border-0" placeholder="Your Name" style="padding: 30px 20px;">
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group">
-                                <input type="email" class="form-control bg-light border-0" placeholder="Your Email" asp-for="register.Email" style="padding: 30px 20px;">
-                                <span asp-validation-for="register.Email" class="text-danger"></span>
+                                <input type="email" class="form-control bg-light border-0" placeholder="Your Email" style="padding: 30px 20px;">
                             </div>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="col-sm-6">
                             <div class="form-group">
-                                <select id="course-category" class="custom-select bg-light border-0 px-3" asp-for="register.Course" style="height: 60px;" onchange="loadRelatedCourses()">
-                                    <option selected>Select Course</option>
-                                    <option value="Web-development">Full Stack Web Developer</option>
-                                    <option value="Data-Science">Data Science</option>
-                                    <option value="Design">Design</option>
+                                <select class="custom-select bg-light border-0 px-3" style="height: 60px;">
+                                    <option selected>Select A courses</option>
+                                    <option value="1">courses 1</option>
+                                    <option value="2">courses 1</option>
+                                    <option value="3">courses 1</option>
                                 </select>
-                                <span asp-validation-for="register.Course" class="text-danger"></span>
                             </div>
                         </div>
-                        <div class="col-sm-6">
-                            <div class="form-group">
-                                <select id="relatedCoursesSelect" class="custom-select bg-light border-0 px-3" asp-for="register.subCourse" style="height: 60px;">
-                                    <option value="">-- Select a Course --</option>
-                                </select>
-                            </div>
-                        </div>                     
-                    </div>
-                    <div class="form-row">
                         <div class="col-sm-6">
                             <button class="btn btn-primary btn-block" type="submit" style="height: 60px;">Sign Up Now</button>
                         </div>
                     </div>
                 </form>
-                <div id="register-success-message" style="display:none;" class="alert alert-success">
-                    Your registration was successful!
-                </div>
-                <div id="choose-course-again" style="display:none">
-                    <button id="choose-again" class="btn btn-danger py-2 px-4" style="margin-top: 10px;">Select Course</button>
-                </div>
             </div>
         </div>
-    </div> *@
-</div>
+    </div>
+ </div>
 <!-- Courses End -->
 <!-- Team Start -->
 <div class="container-fluid py-5">
@@ -396,46 +317,33 @@
                     </div>
                 </div>
             </div>
-           @*  <div class="col-lg-7">
+            <div class="col-lg-7">
                 <div class="section-title position-relative mb-4">
                     <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Need Help?</h6>
                     <h1 class="display-4">Send Us A Message</h1>
                 </div>
                 <div class="contact-form">
-                    <form id="contactForm" asp-action="SubmitContactForm" asp-controller="Form">
+                    <form>
                         <div class="row">
                             <div class="col-6 form-group">
-                                <input type="text" class="form-control border-top-0 border-right-0 border-left-0 p-0" placeholder="Your Name" asp-for="contact.Name" >
-                                <span asp-validation-for="contact.Name" class="text-danger"></span>
+                                <input type="text" class="form-control border-top-0 border-right-0 border-left-0 p-0" placeholder="Your Name" required="required">
                             </div>
                             <div class="col-6 form-group">
-                                <input type="email" class="form-control border-top-0 border-right-0 border-left-0 p-0" placeholder="Your Email" asp-for="contact.Email" >
-                                <span asp-validation-for="contact.Email" class="text-danger"></span>
+                                <input type="email" class="form-control border-top-0 border-right-0 border-left-0 p-0" placeholder="Your Email" required="required">
                             </div>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control border-top-0 border-right-0 border-left-0 p-0" placeholder="Subject" asp-for="contact.Subject" >
-                            <span asp-validation-for="contact.Subject" class="text-danger"></span>
+                            <input type="text" class="form-control border-top-0 border-right-0 border-left-0 p-0" placeholder="Subject" required="required">
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control border-top-0 border-right-0 border-left-0 p-0" rows="5" placeholder="Message" asp-for="contact.Message" ></textarea>
-                            <span asp-validation-for="contact.Message" class="text-danger"></span>
+                            <textarea class="form-control border-top-0 border-right-0 border-left-0 p-0" rows="5" placeholder="Message" required="required"></textarea>
                         </div>
                         <div>
                             <button class="btn btn-primary py-3 px-5" type="submit">Send Message</button>
                         </div>
                     </form>
-                    <!-- Loading indicator -->
-                    <div id="loading" style="display: none;">Processing... Please wait.</div>
-                    <div id="contact-success-message" style="display:none;" class="alert alert-success">
-                        Your message has been sent successfully!
-                        
-                    </div>
-                    <div id="contact-success-sendmessage" style="display:none">
-                        <button id="send-again" class="btn btn-secondary py-2 px-4" style="margin-top: 10px;">Send Message</button>
-                    </div>
                 </div>
-            </div> *@
+            </div>
         </div>
     </div>
 </div>
