Admin and Instructor Options are added.

--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -116,15 +116,15 @@
                             <div class="collapse" id="allCoursesSubmenu">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="/Admin/Courses/Index">
+                                        <a href="/Admin/AdminCourse/AllCourses">
                                             <span class="sub-item">View All Courses</span>
                                         </a>
                                     </li>
-                                    <li>
+                                    @* <li>
                                         <a href="/Admin/Courses/Create">
                                             <span class="sub-item">Add New Course</span>
                                         </a>
-                                    </li>
+                                    </li> *@
                                 </ul>
                             </div>
                         </li>
@@ -139,15 +139,15 @@
                             <div class="collapse" id="pendingCoursesSubmenu">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="/Admin/Courses/Pending">
+                                        <a href="/Admin/AdminCourse/PendingCourses">
                                             <span class="sub-item">View Pending Courses</span>
                                         </a>
                                     </li>
-                                    <li>
+                                   @*  <li>
                                         <a href="/Admin/Courses/Approve">
                                             <span class="sub-item">Approve Courses</span>
                                         </a>
-                                    </li>
+                                    </li> *@
                                 </ul>
                             </div>
                         </li>
