--- a/Areas/Admin/Views/AdminCourse/AllCourses.cshtml
+++ b/Areas/Admin/Views/AdminCourse/AllCourses.cshtml
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="page-inner">
         <div class="page-header">
-            <h3 class="fw-bold mb-3">Tables</h3>
+            @* <h3 class="fw-bold mb-3">Tables</h3> *@
             <ul class="breadcrumbs mb-3">
                 <li class="nav-home">
                     <a href="#">
@@ -22,13 +22,13 @@
                     <i class="icon-arrow-right"></i>
                 </li>
                 <li class="nav-item">
-                    <a href="#">Tables</a>
+                    <a href="#">All Courses</a>
                 </li>
                 <li class="separator">
                     <i class="icon-arrow-right"></i>
                 </li>
                 <li class="nav-item">
-                    <a href="#">Basic Tables</a>
+                    <a href="#">View All Courses</a>
                 </li>
             </ul>
         </div>
