MyInstructor Dashboard LogOut Added.

--- a/Areas/Instructor/Views/Shared/_Layout.cshtml
+++ b/Areas/Instructor/Views/Shared/_Layout.cshtml
@@ -241,7 +241,20 @@
                                             <i class="bx bx-user me-2"></i>
                                             <span class="align-middle">My Profile</span>
                                         </a>
-                                    </li>                        
+                                    </li>  
+                                    <li>
+                                        <form action="/Account/Logout" method="post" style="padding-left:10%">
+                                            <i class="bx bx-power-off me-2"></i>
+                                            <span class="align-middle">
+                                                <button type="submit" style="border:none;background-color:white;color:lightsteelblue">
+                                                
+                                                Log Out
+                                                </button>
+                                            </span>
+                                        </form>
+                                        
+                                       
+                                    </li>
                                 </ul>
                             </li>
                             <!--/ User -->
